Use antlrjob process and tooloptions